# test-wordnet-porter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  config.yaml  install.sh  mkdocs.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: basic_check.yml  ci.yml
docs/: api_reference.md  development.md  index.md  installation.md  usage.md
examples/: basic_migration.py
tests/: test_basic.py  test_config.py
wordnet_porter/: __init__.py  bootstrap.py  cli.py  config.py  main.py
wordnet_porter/steps/: __init__.py  step010_test_sqlite_connection.py  step020_postgres_credentials.py  step030_create_postgres_database.py  step035_purge_directories.py  step040_extract_sqlite_schema.py  step045_analyze_dependencies.py  step050_extract_sqlite_metadata.py  step060_generate_tables.py  step065_generate_foreign_keys.py  step067_generate_foreign_key_validators.py  step068_generate_indexes.py  step070_run_table_scripts.py  step080_run_index_scripts.py  step090_insert_data_tables.py  step095_validate_foreign_key_data.py  step100_apply_foreign_keys.py
wordnet_porter/utils/: __init__.py  db_utils.py
